Some small modifications.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,12 @@
 cmake_minimum_required(VERSION 3.28)
-project(ibmscppbackend)
+project(mqtt_multi_thread)
 
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 
-#set(CMAKE_PREFIX_PATH "/home/leo/Qt/Tools/CMake")
 set(CMAKE_PREFIX_PATH "/home/ken/Qt/6.7.2/gcc_64")
-
-INCLUDE_DIRECTORIES("/usr/local/include/net-snmp")
-LINK_DIRECTORIES("/usr/local/lib")
 
 find_package(Qt6 COMPONENTS
         Core
@@ -18,24 +14,18 @@ find_package(Qt6 COMPONENTS
         Network
         REQUIRED)
 
-add_executable(ibmscppbackend
+add_executable(mqtt_multi_thread
         main.cpp
 
         MqttReadThread.cpp
         MqttWriteThread.cpp
-#        RestRequest.cpp
         MqttThreadConnector.cpp
         MqttThreadPool.cpp
-        SnmpGet.cpp
-        SnmpThreadConnector.cpp
-#        SnmpReadThread.cpp
-#        SnmpWriteThread.cpp
 )
 
-target_link_libraries(ibmscppbackend
+target_link_libraries(mqtt_multi_thread
         Qt::Core
         Qt::Mqtt
         Qt::Network
-        netsnmp
 )
 
